# convergio-mcp

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json  tarpaulin-report.json
.github/workflows/: ci.yml
crates/convergio-mcp/: Cargo.toml
crates/convergio-mcp/src/: bridge.rs  handler.rs  handler_tests.rs  http.rs  lib.rs  main.rs  profile.rs  registry.rs  ring.rs  routes.rs  tests.rs
crates/convergio-mcp/src/registry_defs/: extended.rs  mod.rs
crates/convergio-mcp/tests/: e2e_mcp_lifecycle.rs  e2e_mcp_ring_protocol.rs
docs/adr/: 001-extraction.md  ADR-036-mcp-release-sync.md  ADR-037-native-mcp-server.md
