[workspace]
resolver = "2"
members = ["crates/convergio-mcp"]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-mcp"

[workspace.dependencies]
# Common deps
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio-util = "0.7"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "service"] }
tower = { version = "0.5", features = ["make"] }
