[package]
name = "convergio-mcp"
description = "MCP server for Convergio — exposes daemon tools via rmcp SDK"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
