[package]
name = "convergio-mcp"
description = "MCP server for Convergio — exposes daemon tools via rmcp SDK"
version = "0.1.2"
edition.workspace = true
license.workspace = true

[[bin]]
name = "convergio-mcp-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
